project/stage/testing/semantic/semantic_tests/accept/array.ul
void main () {
    int [10] arr;
    int counter;

    println "Will now fill array with values 0 through 9";
    counter = 0;
    while (counter < 10) {
        arr[counter] = counter;
        print arr[counter];
        print " should be ";
        print counter;
        println "";
        counter = counter + 1;
    }
    return;
}

void boolArrays() {
    boolean [2] arr;
    if (arr[0]) {
        println "Unreachable if block";
    } else {
        println "Condition was false";
    }
}
