project/stage/testing/semantic/semantic_tests/reject/bool_index.ul
void main() {
    int [10] arr;
    arr[arr[0] < 2 == gimmeBool()];
}

boolean gimmeBool() {
    return true;
}
